--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"next": "^9.0.2",
 		"react": "^16.8.6",
-		"react-dom": "^16.8.6"
+		"react-dom": "^16.8.6",
+		"react-spotify-api": "^2.4.0"
 	}
 }
