--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
 		"axios": "^0.19.0",
 		"cheerio": "^1.0.0-rc.3",
 		"cors": "^2.8.5",
+		"dotenv": "^8.0.0",
 		"esm": "^3.2.25",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"nodemon": "^1.19.1"
 	}
 }
