--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,13 @@
 	"dependencies": {
 		"axios": "^0.19.0",
 		"cheerio": "^1.0.0-rc.3",
+		"cookie-parser": "^1.4.4",
 		"cors": "^2.8.5",
 		"dotenv": "^8.0.0",
 		"esm": "^3.2.25",
 		"express": "^4.17.1",
-		"nodemon": "^1.19.1"
+		"nodemon": "^1.19.1",
+		"query-string": "^6.8.2",
+		"request": "^2.88.0"
 	}
 }
