--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.19.0",
+		"framer-motion": "^1.6.1",
 		"next": "^9.0.2",
+		"nprogress": "^0.2.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
-		"react-spotify-api": "^2.4.0"
+		"react-spotify-api": "^2.4.0",
+		"styled-components": "^4.3.2"
 	}
 }
