--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,19 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@zeit/next-css": "^1.0.1",
+		"@zeit/next-sass": "^1.0.1",
 		"axios": "^0.19.0",
 		"framer-motion": "^1.6.1",
+		"js-cookie": "^2.2.1",
 		"next": "^9.0.2",
+		"node-sass": "^4.12.0",
 		"nprogress": "^0.2.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
+		"react-spinkit": "^3.0.0",
 		"react-spotify-api": "^2.4.0",
+		"react-youtube": "^7.9.0",
 		"styled-components": "^4.3.2"
 	}
 }
